--- a/uol_cmp9767m_tutorial/config/planners_topo_nav.yaml
+++ b/uol_cmp9767m_tutorial/config/planners_topo_nav.yaml
@@ -5,7 +5,7 @@ base_global_planner: navfn/NavfnROS #default
 base_local_planner: dwa_local_planner/DWAPlannerROS
 
 #controller_frequency: 2.0 # (double, default: 20.0) The rate in Hz at which to run the control loop and send velocity commands to the base.
-planner_frequency: 10.0 # (double, default: 0.0) The rate in Hz at which to run the global planning loop. If the frequency is set to 0.0, the global planner will only run when a new goal is received or the local planner reports that its path is blocked.
+planner_frequency: 2.0 # (double, default: 0.0) The rate in Hz at which to run the global planning loop. If the frequency is set to 0.0, the global planner will only run when a new goal is received or the local planner reports that its path is blocked.
 
 #TrajectoryPlannerROS:
 #  holonomic_robot: false
@@ -26,16 +26,16 @@ DWAPlannerROS:
 
 NavfnROS:
   visualize_potential: true # (bool, default: false) Specifies whether or not to visualize the potential area computed via a PointCloud2.
-  use_dijkstra: true # (bool, default: true) If true, use dijkstra's algorithm. Otherwise, A*.
+  use_dijkstra: false # (bool, default: true) If true, use dijkstra's algorithm. Otherwise, A*.
 
-#recovery_behaviors:
-#  - {name: conservative_reset, type: clear_costmap_recovery/ClearCostmapRecovery}
-#  - {name: aggressive_reset, type: clear_costmap_recovery/ClearCostmapRecovery}
+recovery_behaviors:
+  - {name: conservative_reset, type: clear_costmap_recovery/ClearCostmapRecovery}
+  - {name: aggressive_reset, type: clear_costmap_recovery/ClearCostmapRecovery}
 
-#conservative_reset:
-#  layer_names: ["obstacle_layer"]
-#  reset_distance: 1.0
+conservative_reset:
+  layer_names: ["obstacle_layer"]
+  reset_distance: 1.0
 
-#aggressive_reset:
-#  layer_names: ["obstacle_layer"]
-#  reset_distance: 0.38 #distance from rotation centre to tail (0.32m) + 6cm slack
+# aggressive_reset:
+#   layer_names: ["obstacle_layer"]
+#   reset_distance: 0.38 #distance from rotation centre to tail (0.32m) + 6cm slack
